<resources>
    <string name="app_name">GymBuddy</string>
    <string name="app_title">Welcome to\nGym Buddy</string>
    <string name="google_login">Log in using Google!</string>
    <string name="placeholder">placeholder</string>
    <string name="log_out">Log Out</string>
    <string name="button_search">Search</string>
    <string name="back_button">Back</string>
    <string name="changeProfile_button">Change Profile</string>
    <string name="chat">Chat</string>
    <string name="removeFriend_button">Remove from Friends</string>
    <string name="send_button">send</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Description">Description</string>
    <string name="Name">Name</string>
    <string name="Location">Location</string>
    <string name="Gym">Gym</string>
    <string name="uploadProfile_button">Upload Profile</string>
    <string name="SearchUserByEmail">Search Users By Email</string>
    <string name="CurrentFriends">Current Friends</string>
    <string name="SentFriendRequest">Sent Friend Requests</string>
    <string name="CurrentRequests">Current Requests</string>
    <string name="NoProfileName">No Profile Name</string>
    <string name="NoLocation">No Location</string>
    <string name="NoGym">No Gym</string>
    <string name="NoDescription">No Description</string>
    <string name="WelcomeColon">Welcome: </string>
    <string name="YourGymColon">Your Gym: </string>
    <string name="GymNameColon">Gym Name: </string>
    <string name="DescriptionColon">Description: </string>
    <string name="Save">Save</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="OneRM">1RM</string>
    <string name="ChooseYourLocationColon">Choose Your Location: </string>
    <string name="InKilosWhat">In Kilos, How many KG of lifting can you do for 5 reps</string>
    <string name="HowMuchKilos">How much KG?</string>
    <string name="Bench">Bench Press</string>
    <string name="Deadlift">Deadlift</string>
    <string name="Squat">Squat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>