<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OneRMActivity">
    <TextView
        android:layout_marginTop="@dimen/regular_marginTop"
        android:text="@string/InKilosWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oneRMTextView"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oneRMEditText"
        android:inputType="number"
        android:hint="@string/HowMuchKilos"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/DeadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/regular_marginTop"
                android:text="@string/Deadlift"/>
            <TextView
                android:id="@+id/DeadTextViewChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/BenchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/regular_marginTop"
                android:text="@string/Bench"/>
            <TextView
                android:id="@+id/BenchTextViewChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/SquatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Squat"/>
            <TextView
                android:id="@+id/SquatTextViewChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelVisibilityMode="labeled"
            android:background="@color/blush_pinkSecondary"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

</LinearLayout>